--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
 
   <body>
   	<%= render "/layouts/nav" %>
-    <%= yield %>
+
+
+  	<div class="container">
+      <span class="notice"><%= notice %></span>
+      <span class="alert"><%= alert %></span>
+  		<%= yield %>
+  	</div>
+
   </body>
 </html>
